--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Doc</title>
 </head>
 <body>
-    <h1>title</h1>
-    
+    <nav>
+    <header>The History Of Basketball</header>
+    <p></p>
+    </nav>
 </body>
 </html>
