--- a/about.html
+++ b/about.html
@@ -50,7 +50,9 @@
                         <img src="images/kyrie jpg dribble.jpg" alt="Kyrie Irving demonstrating his dribbling skills" >
                     </div>
                     <div class="text">
-                        <h4> Renowned for his exceptional ball-handling skills, crossovers, and finishing ability around the rim, nicknamed Uncle Drew.</h4>
+                        <h4> Kyrie Irving renowned for his exceptional ball-handling skills, crossovers, and finishing ability around the rim, nicknamed Uncle Drew.</h4>
+                        
+                        
                     </div>
                 </div>
 
@@ -64,7 +66,7 @@
                 </div>
                     <div class="text">
                         <h4>
-                            A sharpshooter known for his smooth shooting stroke and clutch performances, Allen has hit 2,973 shots from beyond the arc in his career 2nd behind Steph Curry.
+                            Ray Allen a sharpshooter known for his smooth shooting stroke and clutch performances, Allen has hit 2,973 shots from beyond the arc in his career 2nd behind Steph Curry.
                         </h4>
                     </div>
                 </div>
@@ -76,10 +78,10 @@
                 </div>
                 <div id="container">
                     <div class="img">
-                        <img src="images/nba_g_nash_268.jpg" alt="Steve Nash holding a basketball, known for his passing skills">
+                        <img src="images/Nash-Jump_pass.jpg" alt="Steve Nash holding a basketball, known for his passing skills">
                     </div>
                     <div class="text">
-                        <h4>: A two-time MVP, Nash was known for his creativity, accuracy, and ability to deliver pinpoint passes that set up scoring opportunities for his teammates.</h4>
+                        <h4>Steve Nash a two-time MVP, Nash was known for his creativity, accuracy, and ability to deliver pinpoint passes that set up scoring opportunities for his teammates.</h4>
                     </div>
                 </div>
 
@@ -88,10 +90,10 @@
                 </div>
                 <div id="container">
                     <div class="img">
-                        <img src="images/rodman rb.jpg" alt="Dennis Rodman grabbing a rebound during a game">
+                        <img src="images/dennis-rodman-bulls-inline-2jpg.jpg" alt="Dennis Rodman grabbing a rebound during a game">
                     </div>
                     <div class="text">
-                        <h4> Renowned for his tenacious rebounding and defensive skills, Rodman led the league in rebounding for several seasons and played a crucial role in multiple NBA championship teams.</h4>
+                        <h4> Dennis Rodman renowned for his tenacious rebounding and defensive skills, Rodman led the league in rebounding for several seasons and played a crucial role in multiple NBA championship teams.</h4>
                     </div>
                 </div>
 
@@ -100,7 +102,7 @@
                 </div>
                 <div id="container">
                     <div class="img">
-                        <img src="images/gp jpg.jpg_large" alt="Gary Payton, known for his defensive skills, guarding an opponent">
+                        <img src="images/gp sr gaurding.jpg" alt="Gary Payton, known for his defensive skills, guarding an opponent">
                     </div>
                     <div class="text">
                         <h4>
@@ -112,7 +114,11 @@
                 </div>
 
                 <div class="c1">
-                    <p><span style="color: rgb(235, 148, 18);">Footwork</span> is essential for agility and balance, enabling players to move efficiently on both offense and defense, execute pivots, and establish positioning for rebounds and shots.</p>
+                    <p><span style="color: rgb(235, 148, 18);">Footwork</span> is essential for agility and balance, enabling players to move efficiently on both offense and defense, execute pivots, and establish positioning for rebounds and shots. Practicing and refining footwork through drills and exercises helps players enhance their performance and contribute more effectively to their teams' success in basketball.
+
+
+
+                     </p>
                 </div>
                 <div id="container">
                     <div class="img">
@@ -125,13 +131,10 @@
                     </div>
                 </div>
 
-                <div class="c1">
-                    <p>Understanding and mastering these fundamentals are fundamental to becoming a proficient basketball player, contributing to team success and enjoyment of the game.</p>
-                </div>
-
                     </section>
              </main>
-             <section>
+
+             <section >
                 <div class="text-2">
                     <p>If you want to learn more about the game of basketball click the button below</p>
                     <a class="btn"  href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjco4PRpoaHAxX2TTABHS1LC14QFnoECBoQAQ&url=https%3A%2F%2Fwww.masterclass.com%2Farticles%2Fbasketball-fundamentals-guide&usg=AOvVaw087cX8axCD72hE7N0mzKB5&opi=89978449">More Information</a>
