--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>THB About</title>
 </head>
@@ -26,20 +26,15 @@
 
             <main>
               <section>
-                <div class="c1">
+                <div class="welcome">
                 <p><span style="color: rgb(235, 148, 18);">Welcome</span> to the world of basketball - Your Ultimate Guide!
 
-                    Whether you're a seasoned fan or just getting started with the game, i'm here to give you information and go-to resources for everything you need to know about the game. Dive into the rich history, strategies, and excitement of this dynamic sport with us. Our mission is to provide comprehensive insights and knowledge that will enhance your understanding and appreciation of basketball.</p>
+                    Whether you're a seasoned fan or just getting started with the game, i'm here to give you information and go-to resources for everything you need to know about the game. Dive into the rich history, strategies, and excitement of this dynamic sport with us. Our mission is to provide comprehensive insights and knowledge that will enhance your understanding and appreciation of basketball. Basketball is a dynamic team sport played on a rectangular court, focusing on scoring points by shooting a ball through a hoop elevated 10 feet above the ground. The game emphasizes key fundamentals</p>
                 </div>
               </section>
 
-              <section>
+              <section class="welcome">
 
-                <div class="c1">
-                    <p>Basketball is a dynamic team sport played on a rectangular court, focusing on scoring points by shooting a ball through a hoop elevated 10 feet above the ground. The game emphasizes key fundamentals</p>
-                
-                    
-                </div>
 
                 <div class="c1">
                     <p><span style="color: rgb(235, 148, 18);">Dribbling</span>: Players use their fingertips to bounce the ball while moving, allowing them to maneuver around defenders and maintain possession. The dribble is a lethal tool for players. When used properly, the dribble can carve up defenses and lead to big numbers on the scoreboard. Some of the best dribblers are Kyrie Irving, Allen Iverson, and Jamal Crawford.</p>
@@ -47,7 +42,7 @@
 
                 <div id="container">
                     <div class="img">
-                        <img src="images/kyrie jpg dribble.jpg" alt="Kyrie Irving demonstrating his dribbling skills" >
+                        <img src="images/kyrie jpg dribble.jpg" alt="Kyrie Irving demonstrating his dribbling skills" class="center">
                     </div>
                     <div class="text">
                         <h4> Kyrie Irving renowned for his exceptional ball-handling skills, crossovers, and finishing ability around the rim, nicknamed Uncle Drew.</h4>
@@ -137,7 +132,9 @@
              <section >
                 <div class="text-2">
                     <p>If you want to learn more about the game of basketball click the button below</p>
-                    <a class="btn"  href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjco4PRpoaHAxX2TTABHS1LC14QFnoECBoQAQ&url=https%3A%2F%2Fwww.masterclass.com%2Farticles%2Fbasketball-fundamentals-guide&usg=AOvVaw087cX8axCD72hE7N0mzKB5&opi=89978449">More Information</a>
+                    <a href="https://www.shoot360denver.com/blog/basketball-fundamentals-for-beginners">
+                    <button  type="button" class="block" > click for more information </button>
+                    </a>
                 </div>
              </section>
 
