--- a/about.html
+++ b/about.html
@@ -10,18 +10,17 @@
 <body>
 
     <header>
-        <nav id="navbar">
+        <div id="navbar">
             <div class="header">
-                <h1 class="ball"><a href="index.html">The History Of Basketball</a></h1>
+                <a href="index.html" class="logo"> The History Of Basketball</a>
+                <div class="header-right">
+                    <a href="index.html">Home</a>
+                    <a class="active" href="about.html">About</a>
+                    <a href="biographies.html">Biographies</a> 
+                    <a href="fame.html">Careers and More</a>
+                </div>
             </div>
-            <div class="container">
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="biographies.html">Biographies</a></li>
-                    <li><a href="fame.html">Careers and more</a></li>
-                </ul>    
-            </div>    
-        </nav>
+        </div>
     </header>   
 
             <main>
