--- a/biographies.html
+++ b/biographies.html
@@ -9,19 +9,17 @@
 </head>
 <body>
     <header>
-        <nav id="navbar">
+        <div id="navbar">
             <div class="header">
-                <h1 class="ball"><a href="index.html">The History Of Basketball</a></h1>
+                <a href="index.html" class="logo"> The History Of Basketball</a>
+                <div class="header-right">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a class="active" href="biographies.html">Biographies</a> 
+                    <a href="fame.html">Careers and More</a>
+                </div>
             </div>
-            <div class="container">
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="biographies.html">Biographies</a></li>
-                    <li><a href="fame.html">Careers and more</a></li>
-                </ul>    
-            </div>    
-            
-        </nav>
+        </div>
     </header>   
 
     <main>
@@ -29,7 +27,7 @@
         <section>
 
             <div>
-                <p>Throughout their careers athletes consistently pushed the boundaries of what was thought possible in basketball, achieving. These athletes not only only became known for their remarkable athleticism but also for leadership, dedication for game, high iq and much more. These 
+                <p>Welcome to the ultimate destination for everything basketball! this is all on the legends of the game, this is your gateway to the thrilling world of basketball. From the hardwood courts of its humble beginnings to the global phenomenon it is today, basketball has captured the hearts and minds of millions worldwide. basketball has grown from a modest pastime to a worldwide sensation, captivating athletes and fans alike with its fast-paced action, strategic depth, and moments of unparalleled athleticism. This biography section celebrates the pioneers, legends, and game-changers who have shaped basketball into the iconic sport it is today, Explore the stories of players who defied gravity. These athletes not only only became known for their remarkable athleticism but also for leadership, dedication for the game, high iq and much more. 
             </div>
 
         </section>
@@ -106,7 +104,8 @@
                     <li>
                         He is 6 ft fin (1.98m)
                     </li>
-                    <li>
+                    <li> He played for the <a href="https://en.wikipedia.org/wiki/Chicago_Bulls">Chicago Bulls</a> from 1984-1998
+
                         
                     </li>
                 </ul>
