--- a/index.html
+++ b/index.html
@@ -8,20 +8,17 @@
     <title>THB|Home</title>
 </head>
 <body>
-        <header>
-            <nav id="navbar">
-                <div class="header">
-                <h1 class="ball">The History Of Basketball</h1>
+        <div id="navbar">
+            <div class="header">
+                <a href="index.html" class="logo"> The History Of Basketball</a>
+                <div class="header-right">
+                    <a  class="active" href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="biographies.html">Biographies</a> 
+                    <a href="fame.html">Careers and More</a>
+                </div>
             </div>
-                <div class="container">
-                    <ul>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="biographies.html">Biographies</a></li>
-                        <li><a href="fame.html">Careers and more</a></li>
-                        </ul>    
-                    </div>    
-                  </nav>    
-             </header>
+        </div>
 
 
               <section>
