--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
 
             <main>
               <section>
-                <div class="welcome">
-                <p><span style="color: rgb(235, 148, 18);">Welcome</span> to the world of basketball - Your Ultimate Guide!
+                <div class="top">
+                <p> 
 
-                    Whether you're a seasoned fan or just getting started with the game, i'm here to give you information and go-to resources for everything you need to know about the game. Dive into the rich history, strategies, and excitement of this dynamic sport with us. Our mission is to provide comprehensive insights and knowledge that will enhance your understanding and appreciation of basketball. Basketball is a dynamic team sport played on a rectangular court, focusing on scoring points by shooting a ball through a hoop elevated 10 feet above the ground. The game emphasizes key fundamentals</p>
+                    Whether you're a seasoned fan or just getting started with the game, i'm here to give you information and go-to resources for everything you need to know about the game. Dive into the rich history, strategies, and excitement of this dynamic sport with us. Our mission is to provide comprehensive insights and knowledge that will enhance your understanding and appreciation of basketball. Basketball is a dynamic team sport played on a rectangular court, focusing on scoring points by shooting a ball through a hoop elevated 10 feet above the ground. This page is where you will understand key fundamentals of the game</p>
                 </div>
               </section>
 
@@ -124,6 +124,7 @@
                         </h4>
                     </div>
                 </div>
+
 
                     </section>
              </main>
