--- a/fame.html
+++ b/fame.html
@@ -30,9 +30,11 @@
         </div>
     </main>
     
+    <div class="clear"></div>
+    
     <section>
 
-        <div id="container-fame">
+        <div class="container-fame">
 
         <div class="fame">
             <h1>Shaquille O'neal</h1>
@@ -63,7 +65,7 @@
 
     <section>
 
-        <div id="container-fame">
+        <div class="container-fame">
 
         <div class="fame">
             <h1>Magic Johnson</h1>
@@ -93,7 +95,7 @@
 
     <section>
 
-        <div id="container-fame">
+        <div class="container-fame">
 
         <div class="fame">
             <h1>Lebron James</h1>
