--- a/index.html
+++ b/index.html
@@ -60,6 +60,43 @@
                 <p>the <a href="https://en.wikipedia.org/wiki/National_Basketball_Association">NBA</a> was formed by merging two professional basketball leagues, the <a href="https://en.wikipedia.org/wiki/Basketball_Association_of_America">Basketball Association of America</a> (BAA) and the <a href="https://en.wikipedia.org/wiki/National_Basketball_League_(United_States)">National Basketball League</a> (NBL). The league started with 17 teams.</p>
         </div>
 
+        <div class="clear"></div>
+
+        <div class="timeline">
+            <h1>1950</h1>
+            <p>The 24-second shot clock was introduced to speed up the game and prevent teams from stalling. The first game to use the shot clock was played between the New York Knicks and the Boston Celtics.</p>
+        </div>
+
+        <div class="clear"></div>
+
+        <div class="timeline">
+            <h1>1967</h1>
+            <p>The ABA was formed as a rival league to the NBA. The league introduced several innovations, including the three-point line and a red, white, and blue basketball.</p>
+        </div>
+
+        <div class="clear"></div>
+
+        <div class="timeline">
+            <h1>1979</h1>
+            <p>Magic Johnson and Larry Bird joined the NBA, bringing new excitement to the league. The two players would go on to have a fierce rivalry and help popularize the sport in the 1980s, it was truly something special.</p>
+        </div>
+
+        <div class="clear"></div>
+
+        <div class="timeline">
+            <h1>1992</h1>
+            <p>The United States assembled a team of NBA stars for the 1992 Summer Olympics in Barcelona. The team, known as the Dream Team, included Michael Jordan, Magic Johnson, and Larry Bird, among others, and won the gold medal</p>
+        </div>
+
+        <div class="clear"></div>
+
+        <div class="timeline">
+            <h1>2006</h1>
+            <p>The NBA introduced an instant replay system to help referees make more accurate calls. The system allows referees to review footage of certain plays to ensure they made the correct call.</p>
+        </div>
+
+   
+
 </section> 
 
 <footer>
